--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,6 @@ spring:
   datasource:
     hikari:
       driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-      jdbc-url: jdbc:log4jdbc:mysql://localhost:3306/rmSoft?serverTimezone=Asia/Seoul
+      jdbc-url: jdbc:log4jdbc:mysql://localhost:3306/dis?serverTimezone=Asia/Seoul
       username: root
       password: 1234
